# IFJ-projekt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  graph.txt  out.txt  out1.txt  prog.code  run_examples.sh  test.c  test.txt
examples/: 0.ifj  1.ifj  10.ifj  11.ifj  12.ifj  13.ifj  14.ifj  15.ifj  16.ifj  2.ifj  3.ifj  4.ifj  5.ifj  6.ifj  7.ifj  8.ifj  9.ifj  example1.ifj  example2.ifj  example3.ifj  fun.ifj  funexp.ifj  input8.1.ifj  input8.2.ifj  input8.3.ifj  input8.4.ifj  input8.5.ifj  input8.8.ifj  piskvorky.ifj
examples_jankos/: graph.txt  run.sh
examples_jankos/in/: big_test.ifj  lexer_debug1.ifj  lexer_debug10.ifj  lexer_debug11.ifj  lexer_debug12.ifj  lexer_debug13.ifj  lexer_debug14.ifj  lexer_debug15.ifj  lexer_debug2.ifj  lexer_debug3.ifj  lexer_debug4.ifj  lexer_debug5.ifj  lexer_debug7.ifj  lexer_debug8.ifj  lexer_debug9.ifj  test_breakthis1.ifj  test_const_used.ifj  test_exp1.ifj  test_exp2.ifj  test_exp3.ifj  test_exp4.ifj  test_mulbool.ifj  test_null_cmp.ifj  test_raytrace.ifj  test_syn1.ifj  (+19 more)
src/: CMakeLists.txt  Makefile  ast.c  ast.h  bvs.c  bvs.h  codegen.c  codegen.h  error.h  example_multiline.ifj  expression_parser.c  expression_parser.h  expressionparser.c  expressionparser.h  expressionparser.hh  expressionparser.hhh  helper.c  helper.h  input8.2.ifj  input8.3.ifj  input8.6.ifj  input8.7.ifj  input8.8.ifj  input_test.ifj  lexer.c  lexer.h  lexer.hh  main.c  parser.c  parser.h  parser_semantics.c  parser_semantics.h  rozdeleni  script.py  stack.c  stack.h  symtable.c  symtable.h  test.ifj  test_generate_graph.c  (+4 more)
(+2 files in other folders)
